Fix cadence flex, intro spacing

--- a/src/styles/intro.scss
+++ b/src/styles/intro.scss
@@ -11,7 +11,7 @@
 }
 
 .intro-new {
-  margin: auto;
+  margin: 0 auto;
 }
 
 .intro-right {
